--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="video-container">
-            <video src="images/vid-1.mp4" id="video-slider" loop autoplay muted></video>
+            <video src="vid-1.mp4" id="video-slider" loop autoplay muted></video>
         </div>
 
     </section>
@@ -114,7 +114,7 @@
         <div class="row">
 
             <div class="image">
-                <img src="images/book-img.svg" alt="">
+                <img src="book-img.svg" alt="">
             </div>
 
             <form action="">
@@ -161,7 +161,7 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="images/p-1.jpg" alt="">
+                <img src="p-1.jpg" alt="">
                 <div class="content">
                     <h3> <i class="fas fa-map-marker-alt"></i> mumbai </h3>
                     <p>6 Days And 5 Nights<br>
@@ -179,7 +179,7 @@
             </div>
 
             <div class="box">
-                <img src="images/p-2.jpg" alt="">
+                <img src="p-2.jpg" alt="">
                 <div class="content">
                     <h3> <i class="fas fa-map-marker-alt"></i> hawaii </h3>
                     <p>6 Days And 5 Nights<br>
@@ -197,7 +197,7 @@
             </div>
 
             <div class="box">
-                <img src="images/p-3.jpg" alt="">
+                <img src="p-3.jpg" alt="">
                 <div class="content">
                     <h3> <i class="fas fa-map-marker-alt"></i> sydney </h3>
                     <p>6 Days And 5 Nights<br>
@@ -215,7 +215,7 @@
             </div>
 
             <div class="box">
-                <img src="images/p-4.jpg" alt="">
+                <img src="p-4.jpg" alt="">
                 <div class="content">
                     <h3> <i class="fas fa-map-marker-alt"></i> paris </h3>
                     <p>6 Days And 5 Nights<br>
@@ -233,7 +233,7 @@
             </div>
 
             <div class="box">
-                <img src="images/p-5.jpg" alt="">
+                <img src="p-5.jpg" alt="">
                 <div class="content">
                     <h3> <i class="fas fa-map-marker-alt"></i> tokyo </h3>
                     <p>6 Days And 5 Nights<br>
@@ -251,7 +251,7 @@
             </div>
 
             <div class="box">
-                <img src="images/p-6.jpg" alt="">
+                <img src="p-6.jpg" alt="">
                 <div class="content">
                     <h3> <i class="fas fa-map-marker-alt"></i> eypt </h3>
                     <p>6 Days And 5 Nights<br>
@@ -351,7 +351,7 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="images/g-1.jpg" alt="">
+                <img src="g-1.jpg" alt="">
                 <div class="content">
                     <h3>amazing places</h3>
                     <p>Sea View </p>
@@ -359,7 +359,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="images/g-2.jpg" alt="">
+                <img src="g-2.jpg" alt="">
                 <div class="content">
                     <h3>amazing places</h3>
                     <p>Small Islands</p>
@@ -367,7 +367,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="images/g-3.jpg" alt="">
+                <img src="g-3.jpg" alt="">
                 <div class="content">
                     <h3>amazing places</h3>
                     <p>Monuments</p>
@@ -375,7 +375,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="images/g-4.jpg" alt="">
+                <img src="g-4.jpg" alt="">
                 <div class="content">
                     <h3>amazing places</h3>
                     <p>Ancient Sculptures</p>
@@ -383,7 +383,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="images/g-5.jpg" alt="">
+                <img src="g-5.jpg" alt="">
                 <div class="content">
                     <h3>amazing places</h3>
                     <p>Temples</p>
@@ -391,7 +391,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="images/g-6.jpg" alt="">
+                <img src="g-6.jpg" alt="">
                 <div class="content">
                     <h3>amazing places</h3>
                     <p>Sand Dunes</p>
@@ -399,7 +399,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="images/g-7.jpg" alt="">
+                <img src="g-7.jpg" alt="">
                 <div class="content">
                     <h3>amazing places</h3>
                     <p>Air Ballons</p>
@@ -407,7 +407,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="images/g-8.jpg" alt="">
+                <img src="g-8.jpg" alt="">
                 <div class="content">
                     <h3>amazing places</h3>
                     <p>Hiking</p>
@@ -415,7 +415,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="images/g-9.jpg" alt="">
+                <img src="g-9.jpg" alt="">
                 <div class="content">
                     <h3>amazing places</h3>
                     <p>Many More..</p>
@@ -448,7 +448,7 @@
 
                 <div class="swiper-slide">
                     <div class="box">
-                        <img src="images/pic1.png" alt="">
+                        <img src="pic1.png" alt="">
                         <h3>Darren Paterson</h3>
                         <p>Deals always tend to be hard to beat on travel online. We've booked with them for years for
                             this reason. On this occasion, it took a long while (many days) on a few occasions for
@@ -467,7 +467,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="box">
-                        <img src="images/pic2.png" alt="">
+                        <img src="pic2.png" alt="">
                         <h3>Trena Kennedy</h3>
                         <p>TravelOnline was a great company to deal with.
                             Everything was very simple, professional and we were given all the information we required.
@@ -483,7 +483,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="box">
-                        <img src="images/pic3.png" alt="">
+                        <img src="pic3.png" alt="">
                         <h3>Lyndal Nankervis</h3>
                         <p>I had to change my booking due to covid and I know your team was under the pump but I was
                             always reassured and knew my booking was being looked after. We will definitely book other
@@ -499,7 +499,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="box">
-                        <img src="images/pic4.png" alt="">
+                        <img src="pic4.png" alt="">
                         <h3>Nancy Filocamo</h3>
                         <p>Just want to say that I am very happy using Travelonline to book my holidays at Crown Perth.
                             I have recommended to 3 other couples and they have used Travelonline as well to book
@@ -541,7 +541,7 @@
         <div class="row">
 
             <div class="image">
-                <img src="images/contact-img.svg" alt="">
+                <img src="contact-img.svg" alt="">
             </div>
 
             <form action="">
@@ -568,12 +568,12 @@
 
         <div class="swiper-container brand-slider">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="images/1.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/3.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/4.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/5.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/6.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="1.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="3.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="4.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="5.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="6.jpg" alt=""></div>
             </div>
         </div>
 
